Regression: Shape Keys no longer work on Objects with Bevel Modifier #104154

Closed
opened 2023-01-26 16:53:36 +01:00 by Steffen Dünner · 8 comments

System Information
Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.13

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-26 14:17, hash: 1fd54204b0
Worked: 3.4.1
Caused by 1af62cb3bf

Short description of error
I noticed that Shape Keys no longer work on objects with Bevel Modifiers, maybe with other Modifiers, too. In my case I have a simple polygon object with a Bevel Modifier (Set to "Vertices").
The mesh has 2 Shape Keys, "Basis" and "Key 1". In previous Blender versions the Modifier was applied after the shape, but now it looks like the Modifier "sees" only the "Basis" shape.

Exact steps for others to reproduce the error

  • Open attached blend file in Blender 3.4. It's a grid with a Bevel Modifier and a Shape Key

  • Go to "Object Data > Shape Keys" and change the weight of "Key 1"

  • See the grid change shape while the corners are bevelled

  • Open the same blend file in Blender 3.5 latest master and change the shape weight there:

  • Not much is happening. Only the bevelled corners change their shape in a weird manner.

Shapekey_Bug_v01.blend

**System Information** Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.13 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-26 14:17, hash: `1fd54204b0` Worked: 3.4.1 Caused by 1af62cb3bf **Short description of error** I noticed that Shape Keys no longer work on objects with Bevel Modifiers, maybe with other Modifiers, too. In my case I have a simple polygon object with a Bevel Modifier (Set to "Vertices"). The mesh has 2 Shape Keys, "Basis" and "Key 1". In previous Blender versions the Modifier was applied after the shape, but now it looks like the Modifier "sees" only the "Basis" shape. **Exact steps for others to reproduce the error** - Open attached blend file in Blender 3.4. It's a grid with a Bevel Modifier and a Shape Key - Go to "Object Data > Shape Keys" and change the weight of "Key 1" - > See the grid change shape while the corners are bevelled - Open the same blend file in Blender 3.5 latest master and change the shape weight there: - > Not much is happening. Only the bevelled corners change their shape in a weird manner. [Shapekey_Bug_v01.blend](https://archive.blender.org/developer/F14200784/Shapekey_Bug_v01.blend)

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Shape Keys no longer work on Objects with Bevel Modifier to Regression: Shape Keys no longer work on Objects with Bevel Modifier 2023-01-27 05:55:02 +01:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member
Caused by 1af62cb3bf @HooglyBoogly ^

Just noticed that the problem only occurs when activating "Add Rest Position".

Just noticed that the problem only occurs when activating "Add Rest Position".
Hans Goudey self-assigned this 2023-01-27 14:39:23 +01:00
Member

Thanks for the report!

Thanks for the report!
Philipp Oeser removed the
Interest
Modeling
label 2023-02-09 15:27:04 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-13 20:52:16 +01:00

@HooglyBoogly Thanks a lot. Just recompiled and the problem is fixed.

@HooglyBoogly Thanks a lot. Just recompiled and the problem is fixed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104154
No description provided.